# RoughML

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Nanorough_surface_Super_resolution.py  README.md  mkdocs.yml  pyproject.toml  versions.json
.github/: SECURITY.md  label-commenter-config.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  docs.yaml  feature_request.yaml
.github/workflows/: auto-merge.yml  cd.yml  ci.yml  codecov.yml  codeql-analysis.yml  greetings.yml  labels.yml  misspell.yml  preview-docs.yml
4.7.4/: 404.html  index.html  sitemap.xml
4.7.4/CHANGELOG/: index.html
4.7.4/CODE_OF_CONDUCT/: index.html
4.7.4/CONTRIBUTING/: index.html
4.7.4/LICENSE/: index.html
4.7.4/search/: search_index.json
4.7.4/src/cli/benchmark/: index.html
4.7.4/src/roughgan/: index.html
docker/: Dockerfile  Dockerfile.train
docs/: CONTRIBUTING.md  LICENSE.md
docs/src/: roughgan.ipynb
docs/src/cli/: benchmark.md
latest/: 404.html  index.html
latest/CHANGELOG/: index.html
latest/CODE_OF_CONDUCT/: index.html
latest/CONTRIBUTING/: index.html
latest/LICENSE/: index.html
latest/src/cli/benchmark/: index.html
latest/src/roughgan/: index.html
src/roughgan/: app.py  plot.py
src/roughgan/cli/: benchmark.py  dataset.py  model.py  train.py  tune.py  visualize.py
src/roughgan/content/: loss.py  quantization.py
src/roughgan/data/: generators.py  loaders.py  sets.py  transforms.py
src/roughgan/models/: __init__.py  base.py  cnn.py  perceptron.py
src/roughgan/shared/: configuration.py  context_managers.py  decorators.py
src/roughgan/training/: epoch.py  flow.py  manager.py  split.py
src/roughgan/tuning/: flow.py  manager.py  trial.py
src/roughml/cli/: benchmark.py
src/roughml/data/: generators.py
src/roughml/training/: flow.py
tests/: test_roughml.py
